form-container spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
 }
 .form-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .form input {
   border-radius: 10px;
